--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,6 +13,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="background-img"> 
+      <img src="/background_image.jpg" alt="">
+    </div>
     <div id="root"></div>
   </body>
 </html>
